<resources>
    <string name="app_name">HCB CreditAssistant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="payments_title">Способы оплаты</string>
    <string name="payments_footer">Для уточнения текущей задолженности просим позвонить по номеру 7979 со своего мобильного телефона. \nДля погашения просроченной задолженности Банк рекомендует внести платеж, включающий сумму просроченной задолженности и сумму</string>
    <string name="nav_loans">Мои кредиты</string>
    <string name="nav_payments">Способы оплаты</string>
    <string name="nav_offers">Специальные \n предложения</string>

    <!--Loans-->
    <string name="loansTitle">Мои кредиты</string>
    <string name="loansSubHeader">%1$d %2$s от %3$s</string>
    <string name="loansCashType">Кредит наличными</string>
    <string name="loansRDType">Карточка с лимитом</string>

    <!--Credits-->
    <string name="creditsTitle">Credits</string>
    <string name="creditsSchedule"><u>График платежей</u></string>
    <string name="creditsDebt">%1$d %2$s</string>
    <string name="creditsNextDateDue">Рекомендуем оплатить до %1$s</string>
    <string name="creditsDealTotalDebt">Сумма полного погашения %1$d %2$s</string>
    <plurals name="creditsLeftDays">
        <item quantity="one">Остался %1$d день</item>
        <item quantity="few">Осталось %1$d дня</item>
        <item quantity="many">Осталось %1$d дней</item>
        <item quantity="other">Осталось %1$d дней</item>
    </plurals>
    <string name="creditsPastDueDays">Вы вышли на просрочку</string>

    <!-- Offers -->
    <string name="offersTitle">Специальное предложение</string>
    <string name="offersWelcomeM">Уважаемый %1$s!</string>
    <string name="offersWelcomeF">Уважаемая %1$s!</string>
    <string name="offersCallBtn">ПОЗВОНИТЬ</string>
    <string name="offersOrderBtn">ЗАКАЗАТЬ ЗВОНОК</string>
    <string name="offersRequestBtn">ОСТАВИТЬ ЗАЯВКУ</string>


</resources>
